--- a/app/src/main/res/layout/recycler_selected_item.xml
+++ b/app/src/main/res/layout/recycler_selected_item.xml
@@ -19,6 +19,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="44dp"
             android:src="@color/black"
+            setImage="@{selectedData.img}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
