--- a/app/src/main/res/layout/fragment_subscript_calendar.xml
+++ b/app/src/main/res/layout/fragment_subscript_calendar.xml
@@ -9,57 +9,148 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="#f1f4f6">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_calendarfrag_changebtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:padding="10dp"
-                android:text="리스트로 보기"
-                app:layout_constraintEnd_toStartOf="@+id/tv_calendarfrag_analysisbtn"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_calendarfrag_analysisbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:padding="10dp"
-                android:text="구독 지출 분석 >"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_calendarfrag_containier"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_calendarfrag_changebtn">
+                android:layout_height="match_parent">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab_calendarfrag_showlist"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="370dp"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/icons_8_list_96"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <LinearLayout
+                    android:id="@+id/ll_calenderfrag_infocontainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="40dp"
+                    android:orientation="vertical"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:letterSpacing="-0.03"
+                            android:lineSpacingExtra="10sp"
+                            android:text="신한"
+                            android:textColor="#2e2e2e"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:letterSpacing="-0.03"
+                            android:lineSpacingExtra="10sp"
+                            android:text="님의"
+                            android:textColor="#2e2e2e"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:letterSpacing="-0.03"
+                        android:lineSpacingExtra="10sp"
+                        android:text="이번 달 구독 금액"
+                        android:textColor="#2e2e2e"
+                        android:textSize="18sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:letterSpacing="-0.04"
+                            android:lineSpacingExtra="7sp"
+                            android:text="총"
+                            android:textColor="#1377d0"
+                            android:textSize="21sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:letterSpacing="-0.04"
+                            android:lineSpacingExtra="7sp"
+                            android:text="223,700원"
+                            android:textColor="#1377d0"
+                            android:textSize="21sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_calendarfrag_analysisbtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@color/colorPrimary"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="23sp"
+                    android:padding="10dp"
+                    android:textColor="#ffffff"
+                    android:textSize="13sp"
+                    app:layout_constraintBottom_toTopOf="@+id/cv_calendarfrag_calendar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="지출 분석 보기" />
 
                 <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                     android:id="@+id/cv_calendarfrag_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="360dp"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/ll_calenderfrag_infocontainer"
                     tools:layout_editor_absoluteX="0dp" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_calendarfrag_selectedlist"
-                    android:visibility="gone"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/cv_calendarfrag_calendar"/>
+                    android:background="#ffffff"
+                    app:layout_constraintTop_toBottomOf="@+id/cv_calendarfrag_calendar">
 
+                    <TextView
+                        android:id="@+id/tv_calendarfrag_service"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="15dp"
+                        android:letterSpacing="-0.04"
+                        android:lineSpacingExtra="21sp"
+                        android:text="결제되는 서비스"
+                        android:textColor="#3a4047"
+                        android:textSize="15sp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_calendarfrag_selectedlist"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_calendarfrag_service"
+                        android:visibility="gone" />
+                </RelativeLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -69,7 +160,7 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_calendarfrag_changebtn" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
