--- a/app/src/main/res/layout/recycler_selected_item.xml
+++ b/app/src/main/res/layout/recycler_selected_item.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="selectedData"
             type="com.good.solscript.data.SelectedData" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_margin="8dp"
-        android:background="@color/colorPrimary"
+        android:layout_height="86dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_selecteditem_img"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="44dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
             android:src="@color/black"
             setImage="@{selectedData.img}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,19 +32,56 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_selecteditem_img"
             app:layout_constraintTop_toTopOf="parent">
-
             <TextView
                 android:id="@+id/tv_selecteditem_appname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:textColor="#555555"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="19sp"
                 android:text="@{selectedData.appName}" />
 
             <TextView
-                android:id="@+id/tv_selecteditem_date"
+                android:id="@+id/tv_selecteditem_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@{selectedData.date}" />
+                android:textSize="14sp"
+                android:textColor="#797979"
+                android:lineSpacingExtra="22sp"
+                android:text="@{selectedData.price}" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginRight="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_selecteditem_pay"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:letterSpacing="-0.03"
+                android:lineSpacingExtra="19sp"
+                android:text="@{selectedData.pay}"
+                android:textColor="#555555"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_selecteditem_date"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="22sp"
+                android:text="@{selectedData.date}"
+                android:textColor="#797979"
+                android:textSize="14sp" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
