--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -31,7 +31,7 @@
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="20sp"
             android:textColor="#ffffff"
-            android:text="구독 지출 분석"
+            android:text="지출 내용 분석"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
         android:layout_width="match_parent"
         android:layout_marginTop="30dp"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:background="@drawable/round_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rl_analysisact_chartcontainer">
