--- a/app/src/main/res/layout/fragment_subscript_calendar.xml
+++ b/app/src/main/res/layout/fragment_subscript_calendar.xml
@@ -16,26 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_calendarfrag_containier"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab_calendarfrag_showlist"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="370dp"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/icons_8_list_96"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <LinearLayout
                     android:id="@+id/ll_calenderfrag_infocontainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="40dp"
                     android:layout_marginTop="40dp"
                     android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
@@ -107,8 +99,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="40dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@color/colorPrimary"
+                    android:layout_marginBottom="40dp"
+                    android:textStyle="bold"
+                    android:background="@drawable/round_button_primary"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="23sp"
                     android:padding="10dp"
@@ -116,20 +109,22 @@
                     android:textSize="13sp"
                     app:layout_constraintBottom_toTopOf="@+id/cv_calendarfrag_calendar"
                     app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="지출 분석 보기" />
+                    android:text="지출 분석 보기" />
 
                 <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                     android:id="@+id/cv_calendarfrag_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="360dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@id/ll_calenderfrag_infocontainer"
-                    tools:layout_editor_absoluteX="0dp" />
+                    />
 
                 <RelativeLayout
+                    android:id="@+id/rl_calenderfrag_selectedcontainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#ffffff"
+                    android:visibility="gone"
+                    android:background="@drawable/round_top"
                     app:layout_constraintTop_toBottomOf="@+id/cv_calendarfrag_calendar">
 
                     <TextView
@@ -149,7 +144,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_calendarfrag_service"
-                        android:visibility="gone" />
+                        />
                 </RelativeLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -164,4 +159,15 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_calendarfrag_showlist"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/icons_8_list_96"
+        android:layout_marginTop="590dp"
+        android:layout_marginLeft="300dp"
+        />
 </FrameLayout>
