--- a/app/src/main/res/layout/recycler_anaysis_item.xml
+++ b/app/src/main/res/layout/recycler_anaysis_item.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:lineSpacingExtra="3sp"
+            android:textStyle="bold"
             android:layout_marginBottom="12dp"
             setPercent="@{analysisData.percent}"
             android:textColor="#3a4047"
@@ -58,7 +59,7 @@
             android:id="@+id/appCompatSeekBar"
             android:layout_marginBottom="32dp"
             android:layout_width="match_parent"
-            android:layout_height="7dp"
+            android:layout_height="10dp"
             android:max="100"
             setProgress="@{analysisData.percent}"
             android:thumb="@android:color/transparent"
@@ -70,7 +71,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="#c5c4cc"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
