--- a/app/src/main/res/layout/recycler_anaysis_item.xml
+++ b/app/src/main/res/layout/recycler_anaysis_item.xml
@@ -59,7 +59,7 @@
             android:id="@+id/appCompatSeekBar"
             android:layout_marginBottom="32dp"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
+            android:layout_height="16dp"
             android:max="100"
             setProgress="@{analysisData.percent}"
             android:thumb="@android:color/transparent"
@@ -72,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginHorizontal="10dp"
             android:background="#c5c4cc"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
