--- a/app/src/main/res/layout/fragment_subscript_calendar.xml
+++ b/app/src/main/res/layout/fragment_subscript_calendar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     tools:context=".ui.SubscriptCalendarFragment">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#f1f4f6">
@@ -27,7 +28,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="20dp"
                     android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -98,32 +99,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="40dp"
-                    android:layout_marginBottom="40dp"
-                    android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
                     android:background="@drawable/round_button_primary"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="23sp"
                     android:padding="10dp"
+                    android:text="지출 분석 보기"
                     android:textColor="#ffffff"
                     android:textSize="13sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/cv_calendarfrag_calendar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:text="지출 분석 보기" />
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                     android:id="@+id/cv_calendarfrag_calendar"
                     android:layout_width="match_parent"
-                    android:layout_height="360dp"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintTop_toBottomOf="@id/ll_calenderfrag_infocontainer"
-                    />
+                    android:layout_height="356dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/ll_calenderfrag_infocontainer" />
 
                 <RelativeLayout
                     android:id="@+id/rl_calenderfrag_selectedcontainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
                     android:background="@drawable/round_top"
+                    android:visibility="gone"
                     app:layout_constraintTop_toBottomOf="@+id/cv_calendarfrag_calendar">
 
                     <TextView
@@ -142,8 +142,7 @@
                         android:id="@+id/rv_calendarfrag_selectedlist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv_calendarfrag_service"
-                        />
+                        android:layout_below="@+id/tv_calendarfrag_service" />
                 </RelativeLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -162,11 +161,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_calendarfrag_showlist"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:src="@drawable/icons_8_list_96"
-        android:layout_marginTop="590dp"
-        android:layout_marginLeft="300dp"
-        />
-</FrameLayout>
+        android:layout_marginBottom="60dp"
+        app:fabSize="normal"
+        android:layout_marginRight="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
+        app:layout_constraintEnd_toEndOf="@+id/nestedScrollView" />
+</androidx.constraintlayout.widget.ConstraintLayout>
