--- a/app/src/main/res/layout/activity_category_content.xml
+++ b/app/src/main/res/layout/activity_category_content.xml
@@ -19,6 +19,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_back"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="8dp"
@@ -33,6 +34,7 @@
                 android:text="카테고리" />
 
             <ImageView
+                android:id="@+id/iv_search"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_margin="8dp"
@@ -46,7 +48,12 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/pink"
+            app:tabTextColor="@color/gray4"
+
+            />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager_category_item"
