--- a/app/src/main/res/layout/fragment_subscript.xml
+++ b/app/src/main/res/layout/fragment_subscript.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/colorPrimary"
+            app:tabMode="fixed"
             app:tabTextColor="@color/white"
             app:tabSelectedTextColor="@color/pink"
             app:tabIndicatorHeight="4dp"
