--- a/app/src/main/res/layout/recycler_anaysis_item.xml
+++ b/app/src/main/res/layout/recycler_anaysis_item.xml
@@ -21,6 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginStart="16dp"
+            android:textSize="16sp"
+            android:textColor="#4f565d"
+            android:lineSpacingExtra="9sp"
+            android:textStyle="bold"
             android:text="@{analysisData.category}"
             app:layout_constraintBottom_toTopOf="@+id/appCompatSeekBar"
             app:layout_constraintStart_toStartOf="parent" />
@@ -35,6 +39,7 @@
             android:text="@{analysisData.money}"
             android:textColor="#4f565d"
             android:textSize="16sp"
+            android:progressDrawable="@drawable/custom_seekbar"
             app:layout_constraintBottom_toTopOf="@+id/appCompatSeekBar"
             app:layout_constraintStart_toEndOf="@+id/tv_analysisitem_category"
             tools:layout_editor_absoluteY="27dp" />
@@ -59,9 +64,10 @@
             android:id="@+id/appCompatSeekBar"
             android:layout_marginBottom="32dp"
             android:layout_width="match_parent"
-            android:layout_height="16dp"
+            android:layout_height="12dp"
             android:max="100"
             setProgress="@{analysisData.percent}"
+            android:progressDrawable="@drawable/custom_seekbar"
             android:thumb="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,9 +76,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.2dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginHorizontal="10dp"
             android:background="#c5c4cc"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
