--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,40 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".ui.ChatActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_chatact_chatlist"
-        android:layout_width="411dp"
-        android:layout_height="686dp"
-        android:background="#eceff0"
-        app:layout_constraintBottom_toTopOf="@+id/cl_chatact_sendcontainer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
     <LinearLayout
-        android:id="@+id/cl_chatact_sendcontainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_chatact_chatlist"
+            android:layout_width="match_parent"
+            android:layout_height="730dp"
+            android:background="#eceff0"
+            app:layout_constraintBottom_toTopOf="@+id/cl_chatact_sendcontainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <EditText
-            android:id="@+id/et_chatact_inputtext"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/cl_chatact_sendcontainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="9" />
+            android:background="#FFFFFF"
+            android:orientation="horizontal"
 
-        <TextView
-            android:id="@+id/tv_chatact_sendbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="전송" />
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <EditText
+                android:id="@+id/et_chatact_inputtext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="9" />
+
+            <TextView
+                android:id="@+id/tv_chatact_sendbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="전송" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
