--- a/app/src/main/res/layout/recycler_chat_my_item.xml
+++ b/app/src/main/res/layout/recycler_chat_my_item.xml
@@ -27,7 +27,7 @@
             android:background="@drawable/my_chat"
             android:gravity="center_vertical"
             android:paddingHorizontal="12dp"
-            android:text="@{chatData.contents}" />
+            android:text="@{chatData.response}" />
 
     </RelativeLayout>
 </layout>
